--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       content="Web site created using create-react-app"
     />
     <script src="https://kit.fontawesome.com/3d6de4e569.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./font-mfizz-2.4.1/font-mfizz.css">
     <link rel="stylesheet" href="./styles.css">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>React App</title>
